docs/api/qiskit/0.24/qiskit.providers.aer.extensions.SnapshotStatevector.mdx
---
title: SnapshotStatevector
description: API reference for qiskit.providers.aer.extensions.SnapshotStatevector
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.aer.extensions.SnapshotStatevector
---

<span id="qiskit-providers-aer-extensions-snapshotstatevector" />

# qiskit.providers.aer.extensions.SnapshotStatevector

<Class id="qiskit.providers.aer.extensions.SnapshotStatevector" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-aer/tree/stable/0.7/qiskit/providers/aer/extensions/snapshot_statevector.py" signature="SnapshotStatevector(label, num_qubits=0)" modifiers="class">
  Snapshot instruction for statevector snapshot type

  Create a statevector state snapshot instruction.

  **Parameters**

  *   **label** (*str*) – the snapshot label.
  *   **num\_qubits** (*int*) – the instruction barrier size \[Default: 0].

  **Raises**

  **ExtensionError** – if snapshot is invalid.

  **Additional Information:**

  This snapshot is always performed on all qubits in a circuit. The number of qubits parameter specifies the size of the instruction as a barrier and should be set to the number of qubits in the circuit.

  ### \_\_init\_\_

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.__init__" signature="__init__(label, num_qubits=0)">
    Create a statevector state snapshot instruction.

    **Parameters**

    *   **label** (*str*) – the snapshot label.
    *   **num\_qubits** (*int*) – the instruction barrier size \[Default: 0].

    **Raises**

    **ExtensionError** – if snapshot is invalid.

    **Additional Information:**

    This snapshot is always performed on all qubits in a circuit. The number of qubits parameter specifies the size of the instruction as a barrier and should be set to the number of qubits in the circuit.
  </Function>

  ## Methods

  |                                                                                                                                                                                                                  |                                                                          |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.providers.aer.extensions.SnapshotStatevector.__init__ "qiskit.providers.aer.extensions.SnapshotStatevector.__init__")(label\[, num\_qubits])                                                | Create a statevector state snapshot instruction.                         |
  | [`add_decomposition`](#qiskit.providers.aer.extensions.SnapshotStatevector.add_decomposition "qiskit.providers.aer.extensions.SnapshotStatevector.add_decomposition")(decomposition)                             | Add a decomposition of the instruction to the SessionEquivalenceLibrary. |
  | [`assemble`](#qiskit.providers.aer.extensions.SnapshotStatevector.assemble "qiskit.providers.aer.extensions.SnapshotStatevector.assemble")()                                                                     | Assemble a QasmQobjInstruction                                           |
  | [`broadcast_arguments`](#qiskit.providers.aer.extensions.SnapshotStatevector.broadcast_arguments "qiskit.providers.aer.extensions.SnapshotStatevector.broadcast_arguments")(qargs, cargs)                        | Validation of the arguments.                                             |
  | [`c_if`](#qiskit.providers.aer.extensions.SnapshotStatevector.c_if "qiskit.providers.aer.extensions.SnapshotStatevector.c_if")(classical, val)                                                                   | Add classical condition on register classical and value val.             |
  | [`copy`](#qiskit.providers.aer.extensions.SnapshotStatevector.copy "qiskit.providers.aer.extensions.SnapshotStatevector.copy")(\[name])                                                                          | Copy of the instruction.                                                 |
  | [`define_snapshot_register`](#qiskit.providers.aer.extensions.SnapshotStatevector.define_snapshot_register "qiskit.providers.aer.extensions.SnapshotStatevector.define_snapshot_register")(circuit\[, label, …]) | Defines qubits to snapshot for all snapshot methods                      |
  | [`inverse`](#qiskit.providers.aer.extensions.SnapshotStatevector.inverse "qiskit.providers.aer.extensions.SnapshotStatevector.inverse")()                                                                        | Special case.                                                            |
  | [`is_parameterized`](#qiskit.providers.aer.extensions.SnapshotStatevector.is_parameterized "qiskit.providers.aer.extensions.SnapshotStatevector.is_parameterized")()                                             | Return True .IFF.                                                        |
  | [`mirror`](#qiskit.providers.aer.extensions.SnapshotStatevector.mirror "qiskit.providers.aer.extensions.SnapshotStatevector.mirror")()                                                                           | DEPRECATED: use instruction.reverse\_ops().                              |
  | [`qasm`](#qiskit.providers.aer.extensions.SnapshotStatevector.qasm "qiskit.providers.aer.extensions.SnapshotStatevector.qasm")()                                                                                 | Return a default OpenQASM string for the instruction.                    |
  | [`repeat`](#qiskit.providers.aer.extensions.SnapshotStatevector.repeat "qiskit.providers.aer.extensions.SnapshotStatevector.repeat")(n)                                                                          | Creates an instruction with gate repeated n amount of times.             |
  | [`reverse_ops`](#qiskit.providers.aer.extensions.SnapshotStatevector.reverse_ops "qiskit.providers.aer.extensions.SnapshotStatevector.reverse_ops")()                                                            | For a composite instruction, reverse the order of sub-instructions.      |
  | [`validate_parameter`](#qiskit.providers.aer.extensions.SnapshotStatevector.validate_parameter "qiskit.providers.aer.extensions.SnapshotStatevector.validate_parameter")(parameter)                              | Instruction parameters has no validation or normalization.               |

  ## Attributes

  |                                                                                                                                                              |                                                                               |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------- |
  | [`decompositions`](#qiskit.providers.aer.extensions.SnapshotStatevector.decompositions "qiskit.providers.aer.extensions.SnapshotStatevector.decompositions") | Get the decompositions of the instruction from the SessionEquivalenceLibrary. |
  | [`definition`](#qiskit.providers.aer.extensions.SnapshotStatevector.definition "qiskit.providers.aer.extensions.SnapshotStatevector.definition")             | Return definition in terms of other basic gates.                              |
  | [`duration`](#qiskit.providers.aer.extensions.SnapshotStatevector.duration "qiskit.providers.aer.extensions.SnapshotStatevector.duration")                   | Get the duration.                                                             |
  | [`label`](#qiskit.providers.aer.extensions.SnapshotStatevector.label "qiskit.providers.aer.extensions.SnapshotStatevector.label")                            | Return snapshot label                                                         |
  | [`params`](#qiskit.providers.aer.extensions.SnapshotStatevector.params "qiskit.providers.aer.extensions.SnapshotStatevector.params")                         | return instruction params.                                                    |
  | [`snapshot_type`](#qiskit.providers.aer.extensions.SnapshotStatevector.snapshot_type "qiskit.providers.aer.extensions.SnapshotStatevector.snapshot_type")    | Return snapshot type                                                          |
  | [`unit`](#qiskit.providers.aer.extensions.SnapshotStatevector.unit "qiskit.providers.aer.extensions.SnapshotStatevector.unit")                               | Get the time unit of duration.                                                |

  ## Members list

  ### add\_decomposition

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.add_decomposition" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### assemble

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.assemble" signature="assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  ### c\_if

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.c_if" signature="c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  ### copy

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.copy" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### decompositions

  <Attribute id="qiskit.providers.aer.extensions.SnapshotStatevector.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### define\_snapshot\_register

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.define_snapshot_register" signature="define_snapshot_register(circuit, label=None, qubits=None)" modifiers="static">
    Defines qubits to snapshot for all snapshot methods
  </Function>

  ### definition

  <Attribute id="qiskit.providers.aer.extensions.SnapshotStatevector.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.providers.aer.extensions.SnapshotStatevector.duration">
    Get the duration.
  </Attribute>

  ### inverse

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.inverse" signature="inverse()">
    Special case. Return self.
  </Function>

  ### is\_parameterized

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.is_parameterized" signature="is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  ### label

  <Attribute id="qiskit.providers.aer.extensions.SnapshotStatevector.label">
    Return snapshot label
  </Attribute>

  ### mirror

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.mirror" signature="mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### params

  <Attribute id="qiskit.providers.aer.extensions.SnapshotStatevector.params">
    return instruction params.
  </Attribute>

  ### qasm

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.qasm" signature="qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  ### repeat

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.repeat" signature="repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.reverse_ops" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### snapshot\_type

  <Attribute id="qiskit.providers.aer.extensions.SnapshotStatevector.snapshot_type">
    Return snapshot type
  </Attribute>

  ### unit

  <Attribute id="qiskit.providers.aer.extensions.SnapshotStatevector.unit">
    Get the time unit of duration.
  </Attribute>

  ### validate\_parameter

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.validate_parameter" signature="validate_parameter(parameter)">
    Instruction parameters has no validation or normalization.
  </Function>
</Class>

